fixed streched images on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -125,10 +125,11 @@ a:hover {
     cursor:pointer;
 }
 
-img, video {
-    max-width: 100%;
-    height: 100%;
-}
+
+/*img, video {*/
+/*    max-width: 100%;*/
+/*    height: 100%;*/
+/*}*/
 
 /*'cloverHover': '#2f8a2f',*/
 /*'cloverLightGreen': '#81ee7a',*/
